# ComputerClub

./: .clang-format  CMakeLists.txt  README.md  build.sh  test.sh
.github/workflows/: actions.yml
src/: CMakeLists.txt  event_processing.cpp  event_processing.h  main.cpp
src/event/: event.cpp  event.h
src/parser/: parser.cpp  parser.h
tests/: CMakeLists.txt  correctness_test.cpp  parser_tests.cpp  test.sh  vcpkg.json
tests/test_cases/: case_1_answer  case_2  case_2_answer  case_3  case_3_answer  case_4  case_4_answer  case_5  case_5_answer  case_6  case_6_answer
